Remove protocol from NetworkConfiguration
Minor corrections:
- Transform Unstructured event in SelfDescribing event again
- Update demo app with new API
- Update OkHttpClient version